<resources>
    <string name="app_name">SophosApp</string>
    <string name="input_data_msg">Ingresa tus datos para \n acceder</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Ingresar</string>
    <string name="Finger_print_ES">Ingresar con huella</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sophos_logo">Sophos Logo</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="send_documents_ES">Enviar documentos</string>
    <string name="see_documents_ES">Ver documentos</string>
    <string name="office_ES">Oficinas</string>
    <string name="welcome_text_ES">Bienvenido</string>
    <string name="our_options_text_ES">Estas son las opciones \n que tenemos para ti</string>
    <string name="main_sophos_image_description">Main Sophos Image</string>
    <string name="night_theme_ES">Modo nocturno</string>
    <string name="language_ES">Idioma Ingles</string>
    <string name="send_docs_text_ES">Envio de documentación</string>
    <string name="names_ES">Nombres</string>
    <string name="last_names_ES">Apellidos</string>
    <string name="email_ES">Email</string>
    <string name="city_ES">Ciudad</string>
    <string name="document_ES">Documento</string>
    <string name="documents_ES">Documentos</string>
    <string name="send_ES">Enviar</string>
    <string name="document_type_ES">Tipo de documento</string>
    <string name="logout_ES">Cerrar sesion</string>
    <string name="document_id">Numero de documento</string>
    <string name="API_KEY">AIzaSyBDHLI68Y3b8yssbH4_NKYK-LACfwNAr2c</string>
    <string name="detail_document_image">Detail Document Image</string>
    <string name="description_ES">Descripción</string>
</resources>