<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginFragment"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.MainActivity"
        >
        <ImageView
            android:id="@+id/ivMain"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:layout_marginTop="56dp"
            tools:background="@drawable/sophos_logo_light"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/sophos_logo" />

        <LinearLayout
            android:id="@+id/ll_mainBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:paddingTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/ivMain"
            tools:layout_editor_absoluteX="0dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_data_msg"
                android:textAlignment="center"
                android:textColor="@color/main_text_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/Email"
                android:textColorHint="@color/primary_text_color"
                app:startIconDrawable="@drawable/ic_account_pad"
                app:startIconTint="@color/primary_text_color"
                style="@style/loginInput"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/it_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/primary_text_color"
                    android:textColor="@color/primary_text_color"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/Password"
                android:textColorHint="@color/primary_text_color"
                app:startIconDrawable="@drawable/ic_key_pad"
                app:startIconTint="@color/primary_text_color"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/primary_text_color"
                style="@style/loginInput"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/it_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:textColorHint="@color/primary_text_color"
                    android:textColor="@color/primary_text_color"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_mainBox"
            app:layout_constraintVertical_bias="0.247">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                app:cornerRadius="10dp"
                android:textStyle="bold"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:backgroundTint="@color/main_text_color"
                android:textColor="@color/login_text_color"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_fingerprint_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                app:cornerRadius="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="bold"
                android:text="@string/Finger_print_ES"
                android:textAllCaps="false"
                style="@style/FingerPrintButton"
            />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>