<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/sophos_light_logo"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_mainBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/ivMain"
        tools:layout_editor_absoluteX="0dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_data_msg"
            android:textAlignment="center"
            android:textColor="@color/light_purple"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/outline_color"
            app:boxStrokeWidth="2dp"
            android:hint="@string/Email"
            android:textColorHint="@color/light_purple"
            app:startIconDrawable="@drawable/ic_account_pad"
            app:startIconTint="@color/light_purple"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/it_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/light_purple"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/outline_color"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/light_purple"
            android:hint="@string/Password"
            app:startIconDrawable="@drawable/ic_key_pad"
            app:startIconTint="@color/light_purple"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/light_purple"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/it_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                 />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_mainBox"
        app:layout_constraintVertical_bias="0.247">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            app:cornerRadius="10dp"
            android:text="@string/Login"
            android:textAllCaps="false"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            app:cornerRadius="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Finger_print_ES"
            android:backgroundTint="@color/white"
            android:textColor="@color/light_purple"
            app:strokeWidth="2dp"
            app:strokeColor="@color/light_purple"
            app:icon="@drawable/ic_fingerprint"
            app:iconTint="@color/light_purple"
            android:textAllCaps="false"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>